# irl-srt-server

./: .gitignore  AGENTS.md  CMakeLists.txt  ChangeLog.md  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-check.yml  ci.yml
docs/: upstream-currency-2026-06.md  upstream-sync-2026-06.md
docs/adr/: ADR-003-service-migration.md
src/: CMakeLists.txt  sls.conf  srt-live-server.cpp
src/core/: CMakeLists.txt  SLSArray.cpp  SLSArray.hpp  SLSClient.cpp  SLSClient.hpp  SLSEpollThread.cpp  SLSEpollThread.hpp  SLSGroup.cpp  SLSGroup.hpp  SLSListener.hpp  SLSListenerConfig.cpp  SLSListenerCore.cpp  SLSListenerHandler.cpp  SLSLog.cpp  SLSManager.cpp  SLSManager.hpp  SLSMapData.cpp  SLSPlayer.hpp  SLSPublisher.cpp  SLSPublisher.hpp  SLSPuller.cpp  SLSPuller.hpp  SLSPullerManager.cpp  SLSPullerManager.hpp  SLSPusher.hpp  SLSPusherManager.cpp  SLSPusherManager.hpp  SLSRelay.cpp  SLSRelay.hpp  SLSRelayManager.cpp  SLSRole.cpp  SLSRole.hpp  SLSRoleList.cpp  SLSRoleList.hpp  SLSSrt.cpp  SLSSrt.hpp  SLSThread.cpp  TCPRole.cpp  common.cpp  common.hpp  (+6 more)
src/tests/: test_conf_validation.cpp
tests/: CMakeLists.txt  test_conf_parse.cpp  test_conn_rate_limiter.cpp  test_listener_profile_map.cpp  test_sls_sid.cpp  test_srt_profiles.cpp
tests/e2e/: sls-loopback.conf  srt_loopback.sh
tests/fixtures/: conf-multiport.conf  stats-shape.json
